--- a/directions.html
+++ b/directions.html
@@ -55,7 +55,7 @@
             </span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" />
+          <img alt="logo" src="images/logo.png" />
         </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
@@ -84,17 +84,17 @@
           <li class="navcol"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-              <img src="images/facebook.png" class="fbook" </img>
+              <img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
             </a>
           </li>
           <li>
-            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+            <a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
               <img src="images/twitter.png" class="twitter" </img>
             </a>
           </li>
           <li>
             <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-              <img src="images/instagram.png" class="fbook" </img>
+              <img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
             </a>
           </li>
         </ul>
@@ -135,7 +135,7 @@
         </a>
         <div id="collapse1" class="panel-collapse collapse ">
           <div class="panel-body">
-            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+            <iframe alt="The Edge Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
             allowfullscreen></iframe>
           </div>
         </div>
@@ -151,7 +151,7 @@
         </a>
         <div id="collapse2" class="panel-collapse collapse">
           <div class="panel-body">
-            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
+            <iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -166,14 +166,14 @@
         </a>
         <div id="collapse3" class="panel-collapse collapse">
           <div class="panel-body">
-            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11299.99890308541!2d-91.3211473!3d44.9233411!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x23313d2230105d9f!2sGordy&#39;s+Market!5e0!3m2!1sen!2sus!4v1445353229577"
+            <iframe alt="Gordy's Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11299.99890308541!2d-91.3211473!3d44.9233411!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x23313d2230105d9f!2sGordy&#39;s+Market!5e0!3m2!1sen!2sus!4v1445353229577"
             allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
     <div class = "col-md-6">
-      <img src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
+      <img alt "Lake Wissota Map" src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
     </div>
   </div>
     <div class="sponsorBar">
