--- a/tickets.html
+++ b/tickets.html
@@ -52,7 +52,7 @@
 						</span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" />
+          <img alt="logo" src="images/logo.png" />
         </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
@@ -81,17 +81,17 @@
           <li class="navcol"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-              <img src="images/facebook.png" class="fbook" </img>
+              <img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
             </a>
           </li>
           <li>
-            <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+            <a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
               <img src="images/twitter.png" class="twitter" </img>
             </a>
           </li>
           <li>
             <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-              <img src="images/instagram.png" class="fbook" </img>
+              <img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
             </a>
           </li>
         </ul>
@@ -131,7 +131,7 @@
 		<br /> <!-- BREAK -->
 		<br /> <!-- BREAK -->
 		<div style="width:100%; text-align:left;" >
-			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
+			<iframe alt="Registration" src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 		</div> <!-- #(eventbrite) -->
 		<div>
 			<h3 class="headers">Tickets can also be purchased at: </h3>
