--- a/prizes.html
+++ b/prizes.html
@@ -52,7 +52,7 @@
 						</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" />
+					<img alt="logo" src="images/logo.png" />
 				</a>
 				<!-- Logo top aligns with navbar text top. -->
 			</div>
@@ -81,17 +81,17 @@
 					<li class="navcol"><a href="contact.html">Contact</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img src="images/facebook.png" class="fbook" </img>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
 							<img src="images/twitter.png" class="twitter" </img>
 						</a>
 					</li>
 					<li>
 						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img src="images/instagram.png" class="fbook" </img>
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
 						</a>
 					</li>
 				</ul>
