--- a/tickets.html
+++ b/tickets.html
@@ -127,7 +127,7 @@
 		<blockquote>
 			Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
 		</blockquote>
-		<a target="_blank" href="assets/rules.pdf" <button class="btn1">Click here to see the rules</button></a>
+		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
 		<br /> <!-- BREAK -->
 		<div style="width:100%; text-align:left;" >
