--- a/tickets.html
+++ b/tickets.html
@@ -125,7 +125,7 @@
 		<h4 class="headers">Availability:</h4>
 		<h4>Tickets available until 9pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
 		<blockquote>
-			Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
+			Tickets will be mailed through February 4th to the address you indicate. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
 		</blockquote>
 		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
