--- a/tickets.html
+++ b/tickets.html
@@ -123,9 +123,9 @@
 			$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
 		</blockquote>
 		<h4 class="headers">Availability:</h4>
-		<h4>Tickets available until 9pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
+		<h4>Tickets available until 11:59pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
 		<blockquote>
-			Tickets will be mailed through February 4th to the address you indicate. After February 4th they will be available for pick up at The View starting at 6:30am on February 13.
+			Tickets will be mailed through February 4th to the address you indicate. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
 		</blockquote>
 		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
