Update Ticket Info

--- a/tickets.html
+++ b/tickets.html
@@ -117,16 +117,28 @@
 			Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
 			of the number of fish registered so hold on to your Fish Tickets.
 		</blockquote>
-		<h4 class="headers">Raffle Tickets:</h4>
+
+		<h4 class="headers">Fish Ticket Availability:</h4>
+		<h4>Tickets available until 11:59pm on Friday, February 12th. Fish tickets will be available on the ice for $40 until 9am. </h4>
+		<blockquote>
+			Fish tickets will be mailed through February 4th to the address you indicate. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
+      Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
+
+		</blockquote>
+
+    <h4 class="headers">Raffle Tickets:</h4>
 		<h4>$5 each or $20 for 5 </h4>
 		<blockquote>
 			$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
+
+      <br />
+      <br />
+      Raffle tickets purchased will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address you indicate.
+      After February 4th, claim tickets will be available for pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00PM at The View.
+      Please pick up your claim tickets by 2:00PM.
 		</blockquote>
-		<h4 class="headers">Availability:</h4>
-		<h4>Tickets available until 11:59pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
-		<blockquote>
-			Tickets will be mailed through February 4th to the address you indicate. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
-		</blockquote>
+
+
 		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
 		<br /> <!-- BREAK -->
