--- a/tickets.html
+++ b/tickets.html
@@ -114,14 +114,14 @@
 		<h4 class="headers">Fish Tickets:</h4>
 		<h4>$25, one ticket required for each fish registered </h4>
 		<blockquote>
-			Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+			Over $80,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
 			of the number of fish registered so hold on to your Fish Tickets.
 		</blockquote>
 
 		<h4 class="headers">Fish Ticket Availability:</h4>
-		<h4>Tickets available until 11:59pm on Friday, February 12th. Fish tickets will be available on the ice for $40 until 9am. </h4>
+		<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available after February 13th on the ice until 9am for $40. </h4>
 		<blockquote>
-			Fish tickets will be mailed through February 4th to the address you indicate. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
+			Fish tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
       Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
 
 		</blockquote>
@@ -133,9 +133,9 @@
 
       <br />
       <br />
-      Raffle tickets purchased will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address you indicate.
-      After February 4th, claim tickets will be available for pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00PM at The View.
-      Please pick up your claim tickets by 2:00PM.
+      Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address indicated
+      After February 4th, claim tickets will be available for pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00 PM at The View. Please
+      pick up your claim tickets by 2:00 PM, claim tickets not picked up will be brought to The View after 2:00PM.
 		</blockquote>
 
 
