Changed Navbar Hover Effect

--- a/directions.html
+++ b/directions.html
@@ -63,7 +63,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
+          <li class="sliding-middle-out"><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -80,8 +80,8 @@
               <li><a href="pastResults.html">Past Results</a></li>
             </ul>
           </li>
-          <li class="navcol"><a href="tickets.html">Tickets</a></li>
-          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+          <li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
               <img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
