--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="css/custom.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
+  <script src="js/hover.js"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -57,14 +58,13 @@
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
-
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
+          <li class="sliding-middle-out"><a href="index.html">Home</a></li>
           <li class="dropdown">
-            <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="directions.html">Directions</a></li>
+              <li ><a href="directions.html">Directions</a></li>
               <li role="presentation" class="divider"></li>
               <li><a href="schedule.html">Schedule</a></li>
               <li role="presentation" class="divider"></li>
@@ -77,8 +77,8 @@
               <li><a href="pastResults.html">Past Results</a></li>
             </ul>
           </li>
-          <li class="navcol"><a href="tickets.html">Tickets</a></li>
-          <li class="navcol"><a href="contact.html">Contact</a></li>
+          <li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+          <li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
               <img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
@@ -268,7 +268,7 @@
       <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.9.3.0
+      /build 0.9.4.0
     </div>
   </div>
   <div class="footer visible-xs">
