--- a/tickets.html
+++ b/tickets.html
@@ -110,7 +110,10 @@
 	<section id="content">
 		<div class="container">
 		<h2 class="headers">Register Here!</h2>
+    <br />
+    <a href="http://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-18941716183?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=18941716183" alt="Eventbrite - Jig&#39;s Up Blugold Ice Fishing Contest on Lake Wissota" /></a>
 		<br />
+    <br />
 		<h4 class="headers">Fish Tickets:</h4>
 		<h4>$25, one ticket required for each fish registered </h4>
 		<blockquote>
@@ -142,9 +145,6 @@
 		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
 		<br /> <!-- BREAK -->
-		<div style="width:100%; text-align:left;" >
-			<iframe alt="Registration" src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
-		</div> <!-- #(eventbrite) -->
 		<div>
 			<h3 class="headers">Tickets can also be purchased at: </h3>
 			<ul class="list">
