--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <br />
           <!-- BREAK -->
           <div class="btn-center">
-            <a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
+            <a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
           </div>
         </div>
         <!-- #col-sm-6  -->
