Fixed Hamburger Toggle and Added Lion's Club Link
The hamburger menu had a black border when hovered on. It is now
transparent. Added Lake Wissota Logo and Link upon request of the Lake
Wissota Lion's Club.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
   <script src="js/hover.js"></script>
+    <script src="js/main.js"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -92,6 +93,11 @@
           <li>
             <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
               <img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
             </a>
           </li>
         </ul>
