--- a/tickets.html
+++ b/tickets.html
@@ -142,7 +142,7 @@
 		</blockquote>
 
 
-		<a target="_blank" href="assets\2016_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
+		<a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
 		<br /> <!-- BREAK -->
 		<br /> <!-- BREAK -->
 		<div>
