Fixed Sponsor Centering Issue
And cleaned up some CSS

--- a/sponsors.html
+++ b/sponsors.html
@@ -111,11 +111,11 @@
 				<div class="text-center">
 					<h2 class="headers"><b>Title Sponsors</b></h2>
 				</div>
-				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
-					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+				<div class="col-lg-6 col-xs-12 thumb center">
+					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-6 col-md-8 col-xs-12 thumb">
-					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+				<div class="col-lg-6 col-xs-12 thumb center">
+					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<br /> <!-- BREAK -->
 				<div class="text-center">
