Started to Add Prize Photos and Fixed Missing Nav Bar Link
Starting to add prize photos and I also forgot to add the Lion's Club
link to all the pages (it was only on the index page before).

--- a/directions.html
+++ b/directions.html
@@ -97,6 +97,11 @@
               <img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
             </a>
           </li>
+          <li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+          </li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
