--- a/prizes.html
+++ b/prizes.html
@@ -94,6 +94,11 @@
 							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
 						</a>
 					</li>
+					<li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+          </li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -109,6 +114,9 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h2 class="headers">Check Back Later for an Updated List of Prizes</h2>
+					<div class="center">
+						<img class="prizeHeaderImg" src="images\prizes\prizes-all.jpg" alt="All prizes"/>
+					</div>
 				</div> <!-- #col-lg-12 -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
