--- a/sponsors.html
+++ b/sponsors.html
@@ -94,6 +94,11 @@
               <img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
             </a>
           </li>
+          <li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+          </li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
