--- a/prizes.html
+++ b/prizes.html
@@ -117,6 +117,10 @@
 					<div class="center">
 						<img class="prizeHeaderImg" src="images\prizes\prizes-all.jpg" alt="All prizes"/>
 					</div>
+					<br />
+					<div class="center">
+					<h3 class="headers"> Eskimo Quickflip 1 | Eskimo Quickflip 2 | Eskimo Fatfish 949 | Eskimo Mako M43 | Eskimo H.C.40 | Ion 8-Inch Auger | Bigfoot XL Treestand | River's Edge Oasis Treestand | Cash Prizes</h2>
+					</div>
 				</div> <!-- #col-lg-12 -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
