--- a/contact.html
+++ b/contact.html
@@ -296,6 +296,9 @@
       <a href="https://www.facebook.com/wissota.view.5" target="_blank">
         <img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford">
       </a>
+      <a href="http://www.gollonbait.com/" target="_blank">
+        <img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers">
+      </a>
   </div>
   <br />
   <!-- BREAK -->
