--- a/index.html
+++ b/index.html
@@ -227,18 +227,22 @@
             </a>
             <a href="http://www.uwec.edu/dining/" target="_blank">
               <img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-              <a href="http://www.pepsi.com/" target="_blank">
-                <img class="indexSponsor" src="images\sponsors\pepsi.png" alt="Pepsi">
-              </a>
-              <a href="http://www.eauclaireford.com/" target="_blank">
-                <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
-              </a>
-              <a href="http://www.theedgepubandeatery.com/" target="_blank">
-                <img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford">
-              </a>
-              <a href="https://www.facebook.com/wissota.view.5" target="_blank">
-                <img class="indexSponsor" src="images\sponsors\view.png" alt="Ford">
-              </a>
+            </a>
+            <a href="http://www.pepsi.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\pepsi.png" alt="Pepsi">
+            </a>
+            <a href="http://www.eauclaireford.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
+            </a>
+            <a href="http://www.theedgepubandeatery.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford">
+            </a>
+            <a href="https://www.facebook.com/wissota.view.5" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\view.png" alt="Ford">
+            </a>
+            <a href="http://www.gollonbait.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\gollon.png" alt="Ford">
+            </a>
           </div>
         </div>
         <!-- #col-sm-6  -->
