--- a/sponsors.html
+++ b/sponsors.html
@@ -153,6 +153,10 @@
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive" src="images\sponsors\view.png" alt="Ford"></a>
 				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
+				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
 		<br /> <!-- BREAK -->
