Added New Promo Video

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <br />
           <!-- BREAK -->
           <div class="videowrapper">
-            <iframe alt="Jigs Up Commercial" width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/j3KceXrbGn4" frameborder="0"></iframe>
           </div>
           <div class="sponsors">
             <a href="http://www.gordyscountymarket.net" target="_blank">
