Fixed Missing Thingy-ma-bobs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Jigs Up | Home</title>
+  <title>Jig's Up | Home</title>
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
@@ -143,7 +143,7 @@
     <div class="text-center">
       </br>
       <!-- BREAK -->
-      <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
+      <h1 class="headers">3rd Annual Jig's Up Blugold Ice Fishing Contest</h1>
       <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img alt="Sponsors Logo" src="images/3logo.png" </img>
       <div class="horizbar">
