--- a/prizes.html
+++ b/prizes.html
@@ -115,11 +115,19 @@
 				<div class="col-lg-12">
 					<h2 class="headers">Check Back Later for an Updated List of Prizes</h2>
 					<div class="center">
-						<img class="prizeHeaderImg" src="images\prizes\prizes-all.jpg" alt="All prizes"/>
+						<img class="prizeHeaderImg" src="images\prizes\prize1.jpg" alt="All prizes"/>
+						<img class="prizeHeaderImg" src="images\prizes\prize2.jpg" alt="All prizes"/>
+						<img class="prizeHeaderImg" src="images\prizes\prize3.jpg" alt="All prizes"/>
 					</div>
 					<br />
 					<div class="center">
-					<h3 class="headers"> Eskimo Quickflip 1 | Eskimo Quickflip 2 | Eskimo Fatfish 949 | Eskimo Mako M43 | Eskimo H.C.40 | Ion 8-Inch Auger | Bigfoot XL Treestand | River's Edge Oasis Treestand | Cash Prizes</h2>
+						<h3 class="headers"> Eskimo Quickflip 1 | Eskimo Quickflip 2 | Eskimo Fatfish 949 | Eskimo Mako M43 | Eskimo H.C.40 | Ion 8-Inch Auger | Bigfoot XL Treestand | River's Edge Oasis Treestand | Cash Prizes and more!</h2>
+						<br /> <!-- BREAK -->
+						<br /> <!-- BREAK -->
+						<br /> <!-- BREAK -->
+						<br /> <!-- BREAK -->
+						<br /> <!-- BREAK -->
+						<br /> <!-- BREAK -->
 					</div>
 				</div> <!-- #col-lg-12 -->
 			</div> <!-- #row  -->
